less/forms-and-buttons.less
// ----------------------------
// FORMS
// ----------------------------


input[type="search"],
input[type="email"],
input[type="password"],
textarea,
.input--single-line {
    min-height: 44px;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
       -moz-border-radius: 0;
            border-radius: 0;
}


// Signup
// Blog
// Ecom Form
// Ecom Filters
// Ecom Search
// -----------------------------

.signupform .form-body,// Signup
.blogsearch .form-body,// Blog
.ecomproductslist .form,// Ecom Form
.ecomproductslist .fieldset--filters .form-body,// Ecom Filters
.ecomproductslist .fieldset--search .form-body { // Ecom Search
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: justify;
    -moz-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-box-align: end;
    -moz-box-align: end;
    -webkit-align-items: flex-end;
    -ms-flex-align: end;
    align-items: flex-end;
}

.form-group {
    -webkit-box-ordinal-group: 1;
    -moz-box-ordinal-group: 1;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
    .input,
    .select {
        width: 100%;
        min-height: 44px;
    }
    .select {
        height: 44px;
    }
}

.form-group:first-child {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
}

.form-group:last-child .button {
    white-space: nowrap;
    @media @mobile {
        white-space: normal;
    }
}

// Legends and labels
// ----------------------------

.legend,
.label {
    font-family: @font__h3--font-family;
    color: @font-swatch3-color;
    letter-spacing: @font__h3--letter-spacing;
}

legend,
.legend {
    margin-bottom: 20px;
    font-size: @font__h3--font-size;
    font-weight: @font__h3--font-weight;
    line-height: @font__h3--line-height;
    color: @color__form-legend--text;
}

.contactform .legend {
    margin-left: 45px;
    white-space: nowrap;
    &:before {
        content: "\F003";
        font-family: 'FontAwesome', sans-serif;
        position: absolute;
        top: -3px;
        left: 0;
        height: 38px;
        width: 38px;
        line-height: 40px;
        text-align: center;
        font-size: 16px;
        color: #ffffff;
        background-color: fade(@font-swatch3-color, 85%);
    }
}

.label {
    color: @color__form-label--text;
    font-size: bkscale(@font__h3--font-size,0.7);
    line-height: bkscale(@font__h3--line-height,0.7);
}

// Hide Blog Label
.blogsearch {
    &__legend.legend {
        color: @color__blogsearch-legend--text;
    }
    .label {
        display: none;
    }
}


// Profile Widget Form in Footer and Signup Widget
// -----------------------------------------------

.template-footer .profile .signupform,
.signupform {
    text-align: center;
    .form-body {
        margin: 0 auto;
    }
    .legend {
        width: 100%;
        margin: 0 auto 10px;
        text-align: center;
        &:before {
            display: none;
            padding-left: 0;
        }
    }
    .label {
        display: none;
    }
    .form-group:first-child {
        padding-left: 44px;
        position: relative;
        &:before {
            content: "\F003";
            font-family: 'FontAwesome', sans-serif;
            position: absolute;
            top: 0;
            left: 0;
            font-size: 16px;
            height: 44px;
            width: 44px;
            line-height: 42px;
            text-align: center;
            border: 1px solid #dddddd;
            color: @color-swatch4;
            background-color: darken(@color__body--background, 2%);
        }
    }
}



// Blog Search
// -----------------------------

.blogsearch {
    text-align: center;
    .form-body {
        margin: 0 auto;
    }
    .legend {
        width: 100%;
        margin: 0 auto 10px;
        text-align: center;
    }
    .label {
        display: none;
    }
    .form-group:first-child {
        padding-left: 44px;
        position: relative;
        &:before {
            content: "\F002";
            font-family: 'FontAwesome', sans-serif;
            position: absolute;
            top: 0;
            left: 0;
            font-size: 16px;
            height: 44px;
            width: 44px;
            line-height: 42px;
            text-align: center;
            border: 1px solid #dddddd;
            color: @color-swatch4;
            background-color: darken(@color__body--background, 2%);
        }
    }
}


// Signup Form and Blog Search on Desktop & Tablet
// ------------------------------------------------
.signupform .form-body,// Signup
.blogsearch .form-body {// Blog
    width: 40%;
    @media only screen and (max-width:1024px) {
        width: 50%;
    }
    @media @tablet {
        width: 60%;
    }
    @media only screen and (max-width:600px) {
        width: 100%;
    }
}
/* ... */

